# Community-Based-Intelligence

./: .coverage  .dockerignore  .env.example  .gitignore  CBI_TECHNICAL_REPORT.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_GUIDE.md  QUICKSTART.md  README.md  alembic.ini  cbi_aws_deployment.md  cbi_technical_architecture.docx  docker-compose.override.yml.example  docker-compose.yml  pyproject.toml
Files/: HOW_TO_USE.md  IMPLEMENTATION_GUIDE.md  community_based_intelligence_project_report.docx
alembic/: env.py
alembic/versions/: 20240119_000000_0001_initial_schema.py
cbi-claude-code-setup/: CLAUDE.md  IMPLEMENTATION_GUIDE.md
cbi-claude-code-setup/.claude/commands/: add-tests.md  review.md
cbi/agents/: __init__.py  analyst.py  graph.py  prompts.py  reporter.py  state.py  surveillance.py
cbi/api/: deps.py  main.py
cbi/api/routes/: __init__.py  analytics.py  auth.py  notifications.py  reports.py  webhook.py  webhooks.py  websocket.py
cbi/api/schemas/: __init__.py  auth.py  base.py  notifications.py  reports.py
cbi/config/: __init__.py  llm_config.py  logging.py  settings.py
cbi/db/: __init__.py  models.py  queries.py  session.py
cbi/services/: __init__.py  auth.py  message_queue.py  notifications.py  realtime.py  state.py  webhook_security.py
cbi/services/messaging/: __init__.py  base.py  exceptions.py  factory.py  telegram.py  whatsapp.py
cbi/workers/: __init__.py  health.py  main.py
dashboard/: .dockerignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
dashboard/src/app/: global-error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx  providers.tsx
dashboard/src/app/(dashboard)/: error.tsx  layout.tsx  (+2 more)
dashboard/src/hooks/: useAnalytics.ts  useAuth.ts  useRealtime.ts  useReports.ts
dashboard/src/lib/: api.ts
dashboard/src/stores/: authStore.ts  notificationStore.ts
dashboard/src/types/: index.ts
migrations/: 001_initial_schema.sql
scripts/: setup_telegram.py  test_state_service.py  test_telegram.py
scripts/init-db/: 01-init-extensions.sql
tests/: test_analyst_agent.py  test_notification_flow.py  test_realtime_websocket.py  test_surveillace_flow.py
tests/agents/: conftest.py  test_full_conversation.py  test_reporter_extraction.py  test_reporter_intent.py  test_surveillance_classification.py
tests/integration/: __init__.py  conftest.py  test_api_auth.py  test_api_reports.py  test_database_queries.py  test_report_flow.py  test_webhook_flow.py
tests/unit/: __init__.py  conftest.py  test_crypto.py  test_language.py  test_messaging.py  test_prompts.py  test_state.py
(+27 files in other folders)
